# uthash

./: .bazelrc  .gitignore  README.adoc
lib/: BUILD.bazel
src/: BUILD.bazel  utstrsort.c  utstrsort.h
