load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "hdrs",
    srcs = [
        "utarray.h",
        "uthash.h",
        "utlist.h",
        "utringbuffer.h",
        "utstack.h",
        # "utstring.h"
    ],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "uthash",
    linkstatic=1,
    srcs = ["utstrsort.c"],
    hdrs = [
        "utarray.h",
        "uthash.h",
        "utlist.h",
        "utringbuffer.h",
        "utstack.h",
        "utstring.h",
        "utstrsort.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"]
)
